fix: alignment of DynamicFieldsButtons

--- a/src/sections/create-dataset/dynamic-fields-buttons/DynamicFieldsButtons.module.scss
+++ b/src/sections/create-dataset/dynamic-fields-buttons/DynamicFieldsButtons.module.scss
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  margin: 2.5em;
 }
 
 .icon {
